--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -8,6 +8,8 @@
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
 
+@import "./tabbar/tabbar";
+
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
 
 * {
@@ -25,7 +27,7 @@
 		display: block;
 	}
 	h5 {
-		font-style: italic; 
+		font-style: italic;
 		margin: 30px 0px 20px 0px;
 		width: 100%;
 		display: block;
