--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -9,6 +9,8 @@
     margin: 0;
     border-radius: 2px;
     overflow: hidden;
+    transition: 0.3s;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,0.2);
     .sc-card-header {
         display: flex;
         flex-direction: row;
@@ -144,8 +146,9 @@
             .sc-card-menu{
                 opacity: 1;
             }
-        } 
-    } 
+        }
+        box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2);
+    }
 }
 
 /* IE8-11 specific styles go here */
