--- a/views/courses/partials/tools.hbs
+++ b/views/courses/partials/tools.hbs
@@ -1,11 +1,5 @@
 <div class="row">
   <div class="col-sm-12">
-          {{#userHasPermission "TOOL_CREATE" }}
-          <a href="/courses/{{../_id}}/tools/add" class="btn btn-secondary btn-sm pull-right ml-1" title="Neues Tool hinzufügen">
-              <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Neues Tool hinzufügen</span></a>
-          {{/userHasPermission}}
-      <h4>Tools</h4>
-
       <div class="list-group">
           {{#if ltiToolIds}}
               {{#each ltiToolIds}}
@@ -39,5 +33,11 @@
               </p>
           {{/if}}
       </div>
+  </div>
+  <div class="col-sm-12">
+    {{#userHasPermission "TOOL_CREATE" }}
+    <a href="/courses/{{../_id}}/tools/add" class="btn btn-primary w-100 pull-right" title="Neues Tool hinzufügen">
+        <i class="fa fa-plus" aria-hidden="true"></i><span> Neues Tool hinzufügen</span></a>
+    {{/userHasPermission}}
   </div>
 </div>
