--- a/views/courses/partials/topics.hbs
+++ b/views/courses/partials/topics.hbs
@@ -20,7 +20,7 @@
                             <div class="card-header">
                                 <div class="input-group">
                                     {{#userHasPermission "COURSE_EDIT"}}
-                                        <a class="move-handle" title="Thema verschieben">
+                                        <a class="move-handle hidden-xs-down" title="Thema verschieben">
                                              <i class="fa fa-ellipsis-v"></i>
                                              <i class="fa fa-ellipsis-v"></i>
                                         </a>
@@ -62,7 +62,7 @@
                             data-topicId="{{../_id}}">
                                 <div class="card-header">
                                     <div class="input-group">
-                                        <a class="move-handle" title="Thema verschieben">
+                                        <a class="move-handle hidden-xs-down" title="Thema verschieben">
                                              <i class="fa fa-ellipsis-v"></i>
                                              <i class="fa fa-ellipsis-v"></i>
                                         </a>
