--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -25,7 +25,7 @@
             <div class="tabContainer">
               <div class="tabs" data-max-width="1024">
                 <span class="tab" data-tab="a">
-                  <span class="text">Themen</span>
+                  <span class="text">Einheiten</span>
                 </span>
                 <span class="tab" data-tab="b">
                   <span class="text">Aufgaben</span>
@@ -72,6 +72,20 @@
                     </div>
                 </div>
             </div>
+
+            {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+                {{#content "body"}}
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-close">
+                            Abbrechen
+                        </button>
+
+                        <button type="submit" class="btn btn-primary btn-submit">
+                            Löschen
+                        </button>
+                    </div>
+                {{/content}}
+            {{/embed}}
 
             {{#embed "lib/components/modal-form" class="invitation-modal"}}
                 {{#content "fields"}}
