--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -39,8 +39,10 @@
                 <div class="col-xs-12">
                     <div class="row padding-top">
                         <div class="col-sm-12">
-                            <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
-                            <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
+                            <div class="pull-right">
+                              <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
+                              <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
+                           </div>
                         </div>
                     </div>
                 </div>
