--- a/views/courses/partials/tasks.hbs
+++ b/views/courses/partials/tasks.hbs
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-sm-12 container">
         <h4>
+            <i class="fa fa-eye"></i>
             Gestellte Aufgaben
             <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
         </h4>
@@ -33,8 +34,9 @@
       {{/userHasPermission}}
           <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
               <h4>
-                  <small title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-                  Meine Aufgaben
+                  <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+                  <i class="fa fa-eye-slash"></i>
+                  Private Aufgaben
                   <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
               </h4>
           </a>
