--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -40,8 +40,7 @@
                                    target="_blank"
                                    data-method="delete"
                                    title="Datei löschen"
-                                   data-file-key="{{../this.key}}"
-                                   data-file-name="{{../this.name}}"
+                                   data-file-id="{{../this._id}}"
                                     <i class="fa fa-trash-o"></i>
                                 </a>
                                 {{/userHasPermission}}
