--- a/views/homework/components/submission_uploaded_files.hbs
+++ b/views/homework/components/submission_uploaded_files.hbs
@@ -5,7 +5,7 @@
         {{#each this.submission.fileIds}}
             <li class="list-group-item">
                 <i class="fa fa-file" aria-hidden="true"></i> 
-				<a href="/files/file?file={{this.key}}" target="_blank">
+				<a href="/files/file?file={{this._id}}" target="_blank">
                     {{#if this.clearName}}
 						{{this.clearName}}
 					{{else}}	
@@ -13,7 +13,7 @@
 					{{/if}}
                 </a>			
                 <span class="fa-active">
-                    <a href="/files/file?download=true&file={{this.key}}" target="_blank">
+                    <a href="/files/file?download=true&file={{this._id}}" target="_blank">
                     <i class="fa fa-cloud-download"></i>
                     </a>
                     {{#if ../deletionAllowed}}
@@ -21,7 +21,6 @@
                             target="_blank"
                             data-method="delete-file"
                             data-file-name="{{this.name}}"
-                            data-file-key="{{this.key}}"
                             data-file-id="{{this._id}}">
                         <i class="fa fa-trash-o"></i>
                     </a>
