--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -49,7 +49,7 @@
 </div>
 
 <div class="form-group">
-    <select name="category" id="category" data-placeholder="Bereich auswählen" class="chosen-select" tabindex="-1">
+    <select name="category" id="category" data-placeholder="Bereich auswählen (optional)" class="chosen-select" tabindex="-1">
         <option value="dashboard">Übersicht</option>
         <option value="courses">Kurse</option>
         <option value="classes">Klassen</option>
