refactored: wish -> userstory

--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -4,7 +4,7 @@
 
 <div class="form-group">
     <select name="feedbackType" id="feedbackType" type="text" class="form-control form-control-lg" required >
-        <option value="wish" selected>Wunsch ans HPI senden</option>
+        <option value="userstory" selected>Wunsch ans HPI senden</option>
         <option value="problem">Problem ans HPI senden</option>
     </select>
 </div>
