changed name of views/lib/forms/form-helpdesk.hbs to form-contactHPI.hbs

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -258,7 +258,7 @@
 
             {{#embed "lib/components/modal-form" class="feedback-modal"}}
                 {{#content "fields"}}
-                    {{> "lib/forms/form-helpdesk"}}
+                    {{> "lib/forms/form-contactHPI"}}
                 {{/content}}
             {{/embed}}
 
