renamed feedback-modal to contactHPI-modal

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -256,7 +256,7 @@
                 {{#embed "lib/footer"}}{{/embed}}
             {{/unless}}
 
-            {{#embed "lib/components/modal-form" class="feedback-modal"}}
+            {{#embed "lib/components/modal-form" class="contactHPI-modal"}}
                 {{#content "fields"}}
                     {{> "lib/forms/form-contactHPI"}}
                 {{/content}}
