--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -262,7 +262,7 @@
                 {{/content}}
             {{/embed}}
 
-            {{#embed "lib/components/modal-form" class="problem-modal"}}
+            {{#embed "lib/components/modal-form" class="contactAdmin-modal"}}
                 {{#content "fields"}}
                     {{> "lib/forms/form-contactAdmin"}}
                 {{/content}}
