renamed submit-problem to submit-contactAdmin and submit-feedback to submit-contactHPI

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -178,10 +178,10 @@
                                         <div class="delimiter"></div>
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
                                                                                                     aria-hidden="true"></i></i>
-                                            <a href="#" class="link submit-helpdesk">Wunsch oder Problem senden</a></span></li>
+                                            <a href="#" class="link submit-contactHPI">Wunsch oder Problem senden</a></span></li>
                                         <li class="list-group-item list-group-item-action"><span><i class="fa fa-comment"
                                                                                                     aria-hidden="true"></i></i>
-                                            <a href="#" class="link submit-problem">Admin deiner Schule kontaktieren</a></span></li>
+                                            <a href="#" class="link submit-contactAdmin">Admin deiner Schule kontaktieren</a></span></li>
                                     </ul>
                                 </div>
                             </div>
