--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -3,7 +3,8 @@
 
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
-@import "./fontawesome/font-awesome";
+$fa-font-path: "/vendor-optimized/font-awesome/fonts";
+@import "font-awesome/scss/font-awesome.scss";
 @import "./chosen/bootstrap-chosen";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
@@ -25,7 +26,7 @@
 		display: block;
 	}
 	h5 {
-		font-style: italic; 
+		font-style: italic;
 		margin: 30px 0px 20px 0px;
 		width: 100%;
 		display: block;
