temp offline page /account/offline

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -421,9 +421,9 @@ footer {
     padding: 10px 0px 20px;
     line-height: 1.75rem;
 
-    h4 {
+    h1 {
         color: $primaryColor;
-        float: left;
+        font-size: 1.5rem;
         margin-bottom: 0px;
         margin-right: 20px;
         font-weight: bold;
