--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -4,10 +4,36 @@
     white-space: nowrap;
 }
 
+.dropdown-course{
+  display: inline-block;
+  .dropdown-toggle:hover{
+    background-color: $colorLightGrey;
+    color: $primaryColor !important;
+  }
+  .dropdown-menu-course{
+    .dropdown-item {
+      padding: 10px 1.5rem;
+    }
+
+    i{
+      margin-right: 10px;
+    }
+  }
+}
+
 .section-course {
     h4 {
         margin-bottom: 20px;
     }
+    @media (min-width: 576px) {
+      .course-card {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        padding: 10px;
+        padding-bottom:20px;
+      }
+    }
+
     .btn-import-topic {
       margin-bottom: 10px;
     }
