--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
 
         <script type="text/javascript" src="https://unpkg.com/@feathersjs/client@3.5.1/dist/feathers.js" defer></script>
-    
+
     {{/content}}
 
     {{#content "body"}}
@@ -204,7 +204,7 @@
                                 {{/if}}
                             {{/if}}
                         {{/if}}
-                        
+
                         <li class="nav-item" data-step="6" data-intro="Hier findest du Einstellungen und Log-Out.">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
@@ -225,9 +225,11 @@
                     <div class="container-fluid">
                         <div class="row" id="titlebar">
                             <div class="col-sm-9">
-                                <div>
-                                    <h4 id="page-title">{{{stripOnlyScript title}}}</h4>
-                                </div>
+                                {{#unless notitle}}
+                                  <div>
+                                      <h4 id="page-title">{{{stripOnlyScript title}}}</h4>
+                                  </div>
+                                {{/unless}}
                                 <div>
                                     {{subtitle}}
                                 </div>
