--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -22,16 +22,21 @@
 }
 
 .section-course {
-    h4 {
-        margin-bottom: 20px;
-    }
     @media (min-width: 576px) {
       .course-card {
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-        padding: 10px;
+        //padding: 10px;
         padding-bottom:20px;
       }
+
+      .sectionsContainer{
+        padding: 10px 15px 0;
+      }
+    }
+
+    h4 {
+        margin-bottom: 20px;
     }
 
     .btn-import-topic {
