--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -41,7 +41,7 @@
     }
 }
 .sectionsContainer {
-    padding: 10px 5px 0;
+    padding: 10px 0 0;
     .sections {
         .section {
             display: none;
